[gd_scene load_steps=9 format=3 uid="uid://cdct2iw6py75y"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_d8pty"]
[ext_resource type="Texture2D" uid="uid://bdivfxouxxlh2" path="res://assets/sprites/CreÃÅditos_.png" id="2_4umws"]
[ext_resource type="PackedScene" uid="uid://bvnecocw18asd" path="res://scenes/volume_slider.tscn" id="2_ncxop"]
[ext_resource type="AudioStream" uid="uid://bkxxymewujusj" path="res://assets/musicas/Asteria_Batalha_PoquitoMaisLento.mp3" id="2_t4lkn"]
[ext_resource type="FontFile" uid="uid://u1xvgamh4wg0" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-ExtraBold.ttf" id="3_hypwk"]
[ext_resource type="AudioStream" uid="uid://cotfxmv858y5t" path="res://assets/musicas/hitbasico2_sfx.mp3" id="4_fsih4"]
[ext_resource type="FontFile" uid="uid://bw6n6x87f3gk6" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-Bold.ttf" id="6_kwrgt"]
[ext_resource type="FontFile" uid="uid://dxbupxvjecbd4" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-Regular.ttf" id="8_o21xs"]

[node name="Settings" type="Control"]
process_mode = 3
top_level = true
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 13.0
offset_right = 7.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.16, 0.16)
script = ExtResource("1_d8pty")

[node name="TextureRect" type="TextureRect" parent="."]
process_mode = 3
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -940.0
offset_top = -590.0
offset_right = -940.0
offset_bottom = -590.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4umws")
expand_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(-940, -590)
stream = ExtResource("2_t4lkn")
autoplay = true
bus = &"Musica"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
position = Vector2(-940, -590)
stream = ExtResource("4_fsih4")
autoplay = true
bus = &"Efeitos"

[node name="SettingsTitle" type="RichTextLabel" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = -152.0
offset_right = 428.0
offset_bottom = -42.0
theme_override_fonts/normal_font = ExtResource("3_hypwk")
theme_override_font_sizes/normal_font_size = 38
text = "Adjust  (settings.class())"

[node name="SettingsTitle3" type="RichTextLabel" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = -82.0
offset_right = 428.0
offset_bottom = 28.0
theme_override_fonts/normal_font = ExtResource("3_hypwk")
theme_override_font_sizes/normal_font_size = 25
text = "{"

[node name="MasterLabel" type="Label" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 2
offset_left = -441.0
offset_top = -42.0
offset_right = -273.0
offset_bottom = 3.00003
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(458, 29)
theme_override_fonts/font = ExtResource("6_kwrgt")
theme_override_font_sizes/font_size = 25
text = "geral();"

[node name="MasterSlider" parent="." instance=ExtResource("2_ncxop")]
process_mode = 3
texture_filter = 2
layout_mode = 2
offset_left = -276.0
offset_top = -56.25
offset_right = 64.0
offset_bottom = 13.75
value = 1.0
bus_name = "Master"

[node name="SFXLabel" type="Label" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = 6.00003
offset_right = -252.0
offset_bottom = 51.0
pivot_offset = Vector2(458, 29)
theme_override_fonts/font = ExtResource("6_kwrgt")
theme_override_font_sizes/font_size = 25
text = "som_fx();"

[node name="SFXSlider" parent="." instance=ExtResource("2_ncxop")]
process_mode = 3
texture_filter = 2
layout_mode = 2
offset_left = -241.0
offset_top = -10.25
offset_right = 99.0
offset_bottom = 59.75
value = 1.0
bus_name = "Efeitos"

[node name="MusicLabel" type="Label" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = 56.0
offset_right = -252.0
offset_bottom = 101.0
pivot_offset = Vector2(458, 29)
theme_override_fonts/font = ExtResource("6_kwrgt")
theme_override_font_sizes/font_size = 25
text = "musica();"

[node name="MusicSlider" parent="." instance=ExtResource("2_ncxop")]
process_mode = 3
texture_filter = 2
layout_mode = 2
offset_left = -208.0
offset_top = 40.75
offset_right = 132.0
offset_bottom = 110.75
value = 1.0
bus_name = "Musica"

[node name="MuteLabel" type="Label" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = 106.0
offset_right = -294.0
offset_bottom = 151.0
pivot_offset = Vector2(458, 29)
theme_override_fonts/font = ExtResource("6_kwrgt")
theme_override_font_sizes/font_size = 25
text = "mudo();"

[node name="CheckBox" type="CheckBox" parent="."]
process_mode = 3
texture_filter = 2
layout_mode = 2
offset_left = -308.0
offset_top = 105.0
offset_right = -284.0
offset_bottom = 129.0
scale = Vector2(1.67897, 1.67897)

[node name="SettingsTitle2" type="RichTextLabel" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = 153.0
offset_right = 448.0
offset_bottom = 263.0
theme_override_fonts/normal_font = ExtResource("3_hypwk")
theme_override_font_sizes/normal_font_size = 20
text = "//  If you want to report a bug, send a message on the itch.io :) page //"

[node name="SettingsTitle4" type="RichTextLabel" parent="."]
process_mode = 3
modulate = Color(0.717647, 0.807843, 0.764706, 1)
texture_filter = 2
layout_mode = 0
offset_left = -441.0
offset_top = 186.0
offset_right = 428.0
offset_bottom = 296.0
theme_override_fonts/normal_font = ExtResource("3_hypwk")
theme_override_font_sizes/normal_font_size = 28
text = "}"

[node name="GoBackButton" type="Button" parent="."]
process_mode = 3
texture_filter = 4
layout_mode = 0
offset_left = -386.0
offset_top = 296.0
offset_right = -38.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("8_o21xs")
theme_override_font_sizes/font_size = 45
text = "voltar"

[node name="QuitButton" type="Button" parent="."]
process_mode = 3
texture_filter = 4
layout_mode = 0
offset_left = 85.0
offset_top = 296.0
offset_right = 433.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(0.717647, 0.807843, 0.764706, 1)
theme_override_fonts/font = ExtResource("8_o21xs")
theme_override_font_sizes/font_size = 45
text = "sair do jogo"

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
